Fixed overflow issue

--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -11,6 +11,7 @@ html, body {
 	margin: 0;
 	padding: 0;
 	height: 100%;
+	overflow-y: scroll;
 }
 html {
 	background: url('../images/home-office.jpg') no-repeat;
